# transome

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  translator.rs
