[package]
name = "transome"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.29.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"]}
