[package]
name = "transome"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.29.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
